.k8s/apps/platform-admin-web/platform-admin-web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-admin-web
  namespace: dev-web
  labels:
    app.kubernetes.io/name: platform-admin-web
    app.kubernetes.io/part-of: ai-base-app
spec:
  selector:
    app.kubernetes.io/name: platform-admin-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
