.k8s/apps/platform-admin-web/platform-admin-web-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: platform-admin-web-vs
  namespace: dev-web
spec:
  hosts:
    - "*"
  gateways:
    - platform-admin-web-gw
  http:
    - match:
        - uri:
            prefix: /api
        - uri:
            prefix: /docs
        - uri:
            prefix: /docs-json
        - uri:
            prefix: /health
      route:
        - destination:
            host: platform-service.dev-service.svc.cluster.local
            port:
              number: 80
    - route:
        - destination:
            host: platform-admin-web
            port:
              number: 80
